<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">
    <ImageView
        android:contentDescription="@string/banner"
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner" />
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        android:scrollbars="none">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_1"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:text="@string/size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_1"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:text="@string/tortilla" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <RadioGroup
                    android:id="@+id/rgSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/rdoSizeLarge"
                        android:buttonTint="@color/colorGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/large" />

                    <RadioButton
                        android:id="@+id/rdoSizeMedium"
                        android:buttonTint="@color/colorGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/rgTortilla"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/rdoTortillaCorn"
                        android:buttonTint="@color/colorGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/corn" />

                    <RadioButton
                        android:id="@+id/rdoTortillaFlour"
                        android:buttonTint="@color/colorGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flour" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_1"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:text="@string/fillings" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/cbFillingsBeef"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/beef"/>
                <CheckBox
                    android:id="@+id/cbFillingsRice"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rice"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/cbFillingsChicken"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chicken"/>
                <CheckBox
                    android:id="@+id/cbFillingsBeans"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/beans"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/cbFillingsWhiteFish"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/white_fish"/>
                <CheckBox
                    android:id="@+id/cbFillingPico"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pico_de_gallo"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/cbFillingsCheese"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cheese"/>
                <CheckBox
                    android:id="@+id/cbFillingsGuacamode"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/guacamole"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/cbFillingsSeaFood"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sea_food"/>
                <CheckBox
                    android:id="@+id/cbFillingsLBT"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbt"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_1"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:padding="5dp"
                    android:text="@string/beverage" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/cbBeverageSoda"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/soda"/>
                <CheckBox
                    android:id="@+id/cbBeverageMargarita"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/margarita"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/cbBeverageCerveza"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cerveza"/>
                <CheckBox
                    android:id="@+id/cbBeverageTequila"
                    android:buttonTint="@color/colorGreen"
                    android:layout_marginStart="15dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tequila"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/btnOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_your_order"
                    android:textColor="#fff"
                    android:background="@color/colorGreen"
                    android:layout_marginTop="10dp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>